Changed animation iterations on profile picture to a limited number of times to stop animation from going on forever on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,7 @@
 /* animation of picture on hover */
 .profile-picture:hover {
     border: 1px solid black;
-    animation: spin 2s infinite linear;
+    animation: spin 2s 3 linear;
 }
 
 @keyframes spin {
